<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/campus"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/campus_manipal"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:buttonTint="@color/colorAccent" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/campus_mangalore"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:buttonTint="@color/colorAccent"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/designation"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:id="@+id/spinnerDes" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/gender"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/gender_male"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:buttonTint="@color/colorAccent" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/gender_female"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:buttonTint="@color/colorAccent"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/gender_other"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:buttonTint="@color/colorAccent"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/blood_group"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:id="@+id/spinnerBg" />



    <View
        android:layout_width="114dp"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>

    <Button
        android:id="@+id/button_next2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/ripple_login"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:translationZ="4dp" />

</LinearLayout>