<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/pres_address"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/edit_presAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp" />

    <CheckBox
        android:id="@+id/perm_same_as_pres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pres_same_as_perm"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/perm_address"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/edit_permAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/nationality"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/edit_nationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp" />


    <Button
        android:id="@+id/button_next2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/ripple_login"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:translationZ="4dp" />

</LinearLayout>