<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textColorHint="#e0e0e0">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="#e0e0e0"
            app:backgroundTint="@color/colorAccent"
            android:id="@+id/edit_fname" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="#e0e0e0">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="#e0e0e0"
            app:backgroundTint="@color/colorAccent"
            android:id="@+id/edit_lname" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="#e0e0e0">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="#e0e0e0"
            app:backgroundTint="@color/colorAccent"
            android:id="@+id/edit_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="#e0e0e0">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="#e0e0e0"
            app:backgroundTint="@color/colorAccent"
            android:id="@+id/edit_contact" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/ripple_login"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:translationZ="4dp" />

</LinearLayout>